# ComfyUI-Simple-IndexTTs

./: .gitignore  README.md  Start Simple IndexTTS.cmd  Start Simple IndexTTS.ps1  Stop Simple IndexTTS.cmd  Stop Simple IndexTTS.ps1  __init__.py  pyproject.toml  requirements.txt
docs/: GITHUB_INSTALL.md
indextts/gpt/: transformers_generation_utils.py  transformers_gpt2.py
indextts/s2mel/modules/: flow_matching.py
indextts/utils/: maskgct_utils.py
locales/zh/: nodeDefs.json
nodes/: autoLoadModel.py  ttsByAudio.py
packaging/: build_installer.py  build_portable.py  installer_stub.py
scripts/: install.ps1  install_runtime.py
server/: infer_v2.py  webui.py
webui/: app.js  index.html  styles.css
